--- a/config/database.yml
+++ b/config/database.yml
@@ -14,8 +14,8 @@ default: &default
   encoding: utf8
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   username: root
-  password: <%= ENV['65c'] %>
-  socket: /var/lib/mysql/mysql.sock
+  password:
+  socket: /tmp/mysql.sock
 
 development:
   <<: *default
@@ -50,5 +50,6 @@ test:
 production:
   <<: *default
   database: freemarket_sample_65c_production
-  username: freemarket_sample_65c
-  password: <%= ENV['FREEMARKET_SAMPLE_65C_DATABASE_PASSWORD'] %>
+  username: root
+  password: <%= ENV['65c'] %>
+  socket: /var/lib/mysql/mysql.sock
