--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,5 @@ app/controllers/products_controller.rb
 config/routes.rb
 app/assets/stylesheets/application.scss
 app/assets/stylesheets/application.scss
+db/schema.rb
+db/schema.rb
