--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,4 @@ app/views/devise/registrations/new_cellphone.html.haml
 app/views/devise/registrations/new_credit_card.html.haml
 db/schema.rb
 app/models/product.rb
+db/schema.rb
